--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -65,6 +65,7 @@ http {
         location ~ .*\.(jpg|png|gif) {
             gzip  off;
             root  images;
+            expires 24h;
         }
 
         location ~ .*\.(html|js|css) {
@@ -74,6 +75,12 @@ http {
             gzip_comp_level   9;   #压缩级别 数字越大压缩越厉害
             gzip_types        text/css application/javascript;
             root  html;
+        }
+
+        location ~ .*\.json$ {
+            add_header Access-Control-Allow-Origin http://localhost:3000;
+            add_header Access-Control-Allow-Methods GET,POST,PUT,DELETE,OPTIONS;
+            root json;
         }
 
         location ~ ^/download {
