--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -62,13 +62,13 @@ http {
             proxy_pass  http://localhost:3000;
         }
 
-        location ~ .*\.(jpg|png|gif) {
+        location ~ .*\.(jpg|png|gif)$ {
             gzip  off;
             root  images;
-            expires 24h;
+            expires 30s;
         }
 
-        location ~ .*\.(html|js|css) {
+        location ~ .*\.(html|js|css)$ {
             gzip  on;
             gzip_min_length   1k;  #需要压缩的最小大小
             gzip_http_version 1.1; #需要压缩的http请求版本
